--- a/en/how_to_build_it.html
+++ b/en/how_to_build_it.html
@@ -26,8 +26,8 @@ layout: en/default
             </div>
             <div class="col-md-5">
                 <a class="" href="how_to_build_mh.html"><h3>Chassis and motors</h3></a>
-                <h4>Ne esistono varie versioni, scegli quella più adatta alle tue esigenze.</h4>
-                <p>CoderBot è stato realizzato in varie versioni, per materiali diversi: legno, plexiglass, cartone, e motori: dc e servo.</p>
+                <h4>Several versions available, depending on material, motor type.</h4>
+                <p>CoderBot has been built in several versions for differente kind of motor (dc, servo) and chassis material.</p>
             </div>
         </div>
         <!-- /.row -->
@@ -43,8 +43,8 @@ layout: en/default
             </div>
             <div class="col-md-5">
                 <a class="" href="how_to_build_hw.html"><h3>Hardware (electronic)</h3></a>
-                <h4>Raspberry Pi e scheda di controllo</h4>
-                <p>CoderBot è basato su Raspberry Pi, il modulo Camera e una scheda per controllare i motori.</p>
+                <h4>Raspberry Pi, motor control board, battery</h4>
+                <p>CoderBot is based on Raspberry PI, the camera module is required for video streaming.</p>
             </div>
         </div>
         <!-- /.row -->
@@ -60,8 +60,8 @@ layout: en/default
             </div>
             <div class="col-md-5">
                 <a class="" href="how_to_build_sw.html"><h3>Software</h3></a>
-                <h4>La parte software di CoderBot è composta da diverse librerie e moduli, ecco come installare il tutto.</h4>
-                <p>Puoi partire da una distribuzione Raspbian standard e installare le singole componenti, oppure scaricare un'immagine completa già configurata.</p>
+                <h4>Software components run on the Raspbian linux distribution.</h4>
+                <p>The software components are available to download.</p>
             </div>
         </div>
         <!-- /.row -->
