--- a/en/index.html
+++ b/en/index.html
@@ -10,6 +10,7 @@ layout: en/home
                 </h1>
             </div>
             <div class="col-md-4">
+                <a class="jumbo" href="projects.html">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Easy to use</h4>
@@ -17,11 +18,12 @@ layout: en/home
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/easy.jpg" alt="">
-                        <a href="prj_fun.html" class="btn btn-default">Play!</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-4">
+                <a class="jumbo" href="projects.html">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-gift"></i> More than a toy</h4>
@@ -29,38 +31,41 @@ layout: en/home
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/learn.jpg" alt="">
-                        <a href="#" class="btn btn-default">Discover projects</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-4">
+                <a class="jumbo" href="projects.html">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-home"></i> Fit for School</h4>
-                    	<p class="">CoderBot is suited for use in the classroom.</p>
+                    	<p class="">CoderBot is suited for use in the classroom with groups of kids.</p>
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/school.jpg" alt="">
-                        <a href="prj_learn.html" class="btn btn-default">Discover projects</a>
                     </div>
                 </div>
+                </a>
             </div>
         </div>
         <!-- /.row -->
         <div class="row">
             <div class="col-md-4">
+                <a class="jumbo" href="http://github.com/previ/coderbot" target="new">            
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-folder-open"></i> Free and Open source</h4>
-                        <p class="">CoderBot is an open source and hardware projects.</p>
+                        <p class="">CoderBot is an open source and open hardware project.</p>
                     </div>
                     <div class="panel-body">
 						<img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/open.jpg" alt="">
-                        <a href="#" class="btn btn-default">Download the source</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-4">
+                <a class="jumbo" href="how_to_build_mh.html">            
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-gear"></i> Maker friendly</h4>
@@ -68,76 +73,81 @@ layout: en/home
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/maker.jpg" alt="">
-                        <a href="how_to_build_it.html" class="btn btn-default">Make it</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-4">
+                <a class="jumbo" href="how_to_build_mh.html">            
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-expand"></i> Extensible</h4>
-                        <p class="desc-over">Modify, hack, extend CoderBot.</p>
+                        <p class="desc-over">Modify, hack, extend CoderBot, build your very personal bot.</p>
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/extend.jpg" alt="">
-                        <a href="#" class="btn btn-default">Discover examples</a>
                     </div>
                 </div>
+                </a>
             </div>
         </div>
 
         <!-- Portfolio Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Principali caratteristiche</h2>
+                <h2 class="page-header">Features</h2>
             </div>
             <div class="col-md-6">
+            	<a class="jumbo" href="about.html#wifi">            
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Controllabile via computer, tablet, smartphone</h4>
-                        <p class="">CoderBot si controlla tramite un comune browser connesso al bot via wifi, non è necessario installare software.</p>
+                        <h4><i class="fa fa-fw fa-check"></i> Control it by Computer, Tablet, Smartphone</h4>
+                        <p class="">CoderBot scan be controlled and programmed by any device running an html5 compatible browser and wifi.</p>
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/wifi.png" alt="">
-                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-6">
+                <a class="jumbo" href="about.html#coding_easy">            
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Coding? Kid's play</h4>
-                        <p class="">L'interfaccia di programmazione presenta livelli di complessità crescenti, adatta dai 6 anni in avanti.</p>
+                        <p class="">The programming interface is configurable for different levels of complexity, suitable for kids from 6 and up.</p>
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/coding.png" alt="">
-                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-6">
+                <a class="jumbo" href="about.html#comp_vision">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Computer Vision: video streaming and object detection</h4>
-                        <p class="">La telecamera permette il riconoscimento di oggetti, ostacoli, percorsi, simboli per sviluppare progetti e giochi complessi.</p>
+                        <p class="">The videocamera can stream live images and can be used to detect the environment, objects, obstacles, paths.</p>
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/eye.png" alt="">
-                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-6">
+                <a class="jumbo" href="about.html#audio">            
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Sintesi vocale e suoni</h4>
-                        <p class="">CoderBot può usare l'altoparlante per comunicare: emettendo suoni o, grazie alla sintesi vocale, frasi definite dal programma.</p>
+                        <h4><i class="fa fa-fw fa-check"></i> Sound and speech synthesis</h4>
+                        <p class="">CoderBot che communicate using the speaker: predefined sounds and synthesised speech</p>
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="{{site.baseurl}}/img/speak.png" alt="">
-                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
                     </div>
                 </div>
+                </a>
             </div>
         </div>
         <!-- /.row -->
