--- a/it/about.html
+++ b/it/about.html
@@ -40,13 +40,14 @@ layout: it/default
             <div class="col-md-12">
                 <h2>Perché CoderBot</h2><a name="why"></a>
                 <p>CoderBot è un robot orientato alla didattica.</p>
-                <p>L'obiettivo principale del progetto è realizzare un robot in grado di essere programmato da bambini dai 6 anni in avanti, e che rimanga interessante e offra spunti per l'apprendimento a ragazzi fino ai 14 anni (e oltre).</p>
+                <p class="lead">L'obiettivo principale del progetto è realizzare un robot in grado di essere programmato da bambini dai 6 anni in avanti, e che rimanga interessante e offra spunti per l'apprendimento a ragazzi fino ai 14 anni (e oltre).</p>
 				<img src="../img/home_2.jpg" width="700">
 				<h3>Come è fatto</h3><a name="how"></a>
                 <p>E' un veicolo con due ruote motrici anteriori indipendenti e un terzo punto di appoggio posteriore costituito da una sfera libera.</p>
 				<p>E' basato su <a href="http://www.raspberrypi.org" target="new">Raspberry PI</a>, un computer completo (CPU, GPU, audio, memoria RAM e flash).</p>
 				<p>Alla scheda principale è collegata una videocamera, una scheda di controllo per i due motori (DC oppure servo) e un adattatore wifi. L'audio è amplificato tramite un altoparlante autoalimentato.</p>
-				<p>Il sistema operativo è Raspbian, una versione di Linux debian specifica per Raspberry, su cui si appoggiano alcune componenti per gestire rete, videocamera, motori e interfaccia utente, quest'ultima realizzata come una web application html5 a sua volta erogata da un web server.</p>
+				<p>Il sistema operativo è Raspbian, una versione di Linux debian specifica per Raspberry, su cui si appoggiano alcune componenti per gestire rete, videocamera, motori e interfaccia utente, quest'ultima realizzata come una web application html5, a sua volta erogata da un web server che gira all'interno di Raspberry.</p>
+				<p>Il robot è controllabile da qualsiasi dispositivo che sia in grado di connettersi a una rete wifi e dotato di un browser compatibile con html5.</p>
                 <h3>Cosa può fare</h3><a name="what"></a>
                 <p>Il robot è in grado di muoversi su superfici piane: avanti, indietro e ruotare sul posto o curvare con raggi variabili, agendo sulla velocità dei due motori.</p>
                 <img src="../img/easy.jpg" width="400">
@@ -77,17 +78,17 @@ bot.left(speed=60, elapse=1)
 				<p>Grazie alla Camera è in grado di riprendere immagini e trasmetterle al dispositivo usato per pilotarlo (computer, tablet o smartphone).</p>
 				<a name="obj_rec"></a>
 				<p>Inoltre può utilizzare le immagini per evitare ostacoli:</p>
-				<p>[Esempio di riconoscimento ostacolo]</p>
+				<p>[Coming soon: video di riconoscimento ostacolo]</p>
 				<a name="line_follower"></a>
 				<p>Per riconoscere e seguire linee:</p>
-				<p>[Esempio di line follower]</p>
+				<p>[Coming soon: video di line follower]</p>
 				<a name="color_rec"></a>				
 				<p>Per riconoscere oggetti in base al loro colore:</p>
-				<p>[Esempio di color catcher]</p>
+				<p>[Coming soon: video di color catcher]</p>
 				<a name="face_rec"></a>				
 				<p>E' inoltre in grado di riconoscere visi di persone e simboli predefiniti.</p>
-				<p>[Esempio di face finder]</p>
-				<p>[Esempio di signal finder]</p>
+				<p>[Coming soon: video di face finder]</p>
+				<p>[Coming soon: video di signal finder]</p>
             </div>
 
         </div>
