--- a/it/how_to_build_mh.html
+++ b/it/how_to_build_mh.html
@@ -36,21 +36,21 @@ layout: it/default
         <!-- Related Projects Row -->
         <div class="row">
             <div class="col-md-12">
-				<p>Questa sezione descrive tutte le componenti necessarie a costruire un CoderBot, ad esclusione delle <a href="how_to_build_hw.html">componenti Hardware</a></p>
+				<p></p>
+				<p class="lead">Questa sezione descrive tutte le componenti necessarie a costruire un CoderBot, ad esclusione delle <a href="how_to_build_hw.html">componenti Hardware</a></p>
             	<h3>Telaio</h3>
 				<p>Il telaio di CoderBot è realizzato in vari materiali: legno, acrilico (plexiglass), cartone corrugato.</p>
 				<p>Per ogni materiale è disponibile un disegno (SVG) adatto ad essere inviato a un servizio di taglio laser per ottenere i pezzi pronti per essere assemblati.</p>
             	<ul>
-            		<li>Telaio acrilico - spessore 3mm - motori dc</li>
-            		<li>Telaio legno - spessore 3mm - motori dc</li>
-            		<li>Telaio legno - spessore 3mm - motori servo</li>
-            		<li>Telaio cartone corrugato - spessore 6mm - motori dc o servo</li>
+            		<li><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VDhVWmxuOGl0Q28&authuser=0" target="new">Telaio acrilico</a> - spessore 3mm - motori dc</li>
+            		<li><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VFI3VFducTNjYjQ&authuser=0" target="new">Telaio legno</a> - spessore 3mm - motori servo</li>
+            		<li><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9QUJLQW9kX1oxbVE&authuser=0" target="new">Telaio cartone corrugato</a> - spessore 6mm - motori dc o servo</li>
             	</ul>
                 <h3>Motori</h3>
                 <p>CoderBot può pilotare due tipo di motori: corrente continua (DC) e servo.</p>
                 <p>La scelta del tipo di motori dipende da come si intende impiegare il bot: i motori dc sono più veloci, più economici ma meno precisi, i servo al permettono un miglior controllo e si prestano per applicazioni dove servono movimento più accurati.</p>
                 <h3>Ruota libera</h3>
-                <p>Si consiglia di utilizzare una sfera come questa come terzo punto di appoggio.</p>
+                <p>Si consiglia di utilizzare una sfera come <a href="http://d2anbkwxz3vv3s.cloudfront.net/services/repository/images/38ad78cf-8411-44d9-92ba-dcd8935f1ce3/300/300/PNG" target="new">questa</a>, facilmente reperibile nei ferramenta, come terzo punto di appoggio.</p>
                 <h3>Bulloneria varia</h3>
                 <p>Viti M3x20 e relativi dadi, M3x10 e M2x10 per fissare la camera nel caso di telaio in acrilico.</p>
                 <h3>Elenco materiali</h3>
@@ -72,7 +72,7 @@ layout: it/default
                 <tr>
                 <td>Telaio acrilico (plexyglass 3mm)</td>
                 <td>1</td>
-                <td><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VDhVWmxuOGl0Q28&authuser=0" target="new">link</a></td>
+                <td><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VDhVWmxuOGl0Q28&authuser=0" target="new">link a stencil per lasercut</a> tagliabile <a href="http://vectorealism.com" target="new">qui</a></td>
                 </tr>
                 <tr>
                 <td>Motori DC</td>
@@ -162,17 +162,17 @@ layout: it/default
                 <tr>
                 <td>Telaio cartone corrugato (6mm)</td>
                 <td>1</td>
-                <td><a href="https://drive.google.com/file/d/0B0WH-R3RUJc9VFI3VFducTNjYjQ/view?usp=sharing" target="new">stencil per laser</a></td>
+                <td><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9QUJLQW9kX1oxbVE&authuser=0" target="new">stencil per laser</a> tagliabile <a href="http://vectorealism.com" target="new">qui</a></td>
                 </tr>
                 <tr>
                 <td>Motori DC</td>
                 <td>2</td>
-                <td><a href="http://microcontrollershop.com/product_info.php?cPath=315&products_id=5832" target="new">link</a></td>
+                <td><a href="https://www.olimex.com/Products/RobotParts/GearMotors/MG-6-120/" target="new">link</a> <a href="http://microcontrollershop.com/product_info.php?cPath=315&products_id=5832" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Ruote</td>
                 <td>2</td>
-                <td><a href="http://microcontrollershop.com/product_info.php?products_id=5833" target="new">link</a></td>
+                <td><a href="https://www.olimex.com/Products/RobotParts/Wheels/MG-WHEEL/" target="new">link</a> <a href="http://microcontrollershop.com/product_info.php?products_id=5833" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Ruota libera</td>
@@ -265,12 +265,12 @@ layout: it/default
                 <tr>
                 <td>Telaio legno (compensato 3mm)</td>
                 <td>1</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VFI3VFducTNjYjQ&authuser=0" target="new">stencil per lasercut</a> tagliabile <a href="http://vectorealism.com" target="new">qui</a></td>
                 </tr>
                 <tr>
                 <td>Motori servo</td>
                 <td>2</td>
-                <td><a href="http://shop.com">link</a></td>
+                <td><a href="http://www.pololu.com/product/1248">link</a> <a href="http://www.amazon.it/SM-S4303R-Servomotore-Elicotteri-Robot-Ricambio/dp/B00EYYQ61K/ref=sr_1_1">link</a></td>
                 </tr>
                 <tr>
                 <td>Ruota libera</td>
