--- a/en/blog-home-1.html
+++ b/en/blog-home-1.html
@@ -6,7 +6,7 @@ layout: en/default
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">News
-                    <small>Novità sul progetto CoderBot</small>
+                    <small>CoderBot project news</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">CoderBot</a>
