--- a/en/contact.html
+++ b/en/contact.html
@@ -4,13 +4,13 @@ layout: en/default
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Contatti
-                    <small>Rimani aggiornato sul progetto CoderBot</small>
+                <h1 class="page-header">Contacts
+                    <small>Keep updated about the project</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">CoderBot</a>
                     </li>
-                    <li class="active">Contatti</li>
+                    <li class="active">Contacts</li>
                 </ol>
             </div>
         </div>
