--- a/en/how_to_build_mh.html
+++ b/en/how_to_build_mh.html
@@ -5,13 +5,13 @@ layout: en/default
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Telaio e motori
-                    <small>Vari modelli per varie esigenze.</small>
+                <h1 class="page-header">Chassis and motors
+                    <small>Several versions available.</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">CoderBot</a></li>
-                    <li><a href="how_to_build_it.html">Come costruirlo</a></li>
-                    <li class="active">Telaio e motori</li>
+                    <li><a href="how_to_build_it.html">Make</a></li>
+                    <li class="active">Chassis and motors</li>
                 </ol>
             </div>
         </div>
@@ -35,29 +35,305 @@ layout: en/default
 
         <!-- Related Projects Row -->
         <div class="row">
-
             <div class="col-md-12">
-            	<h2>Elenco delle componenti</h2>
+				<p></p>
+				<p class="lead">This section describes all mechanical parts required to build a CdoerBot</p>
+            	<h3>Chassis</h3>
+				<p>The chassis can be built using several materials: acrilic, wood, or corrugated cardboard.</p>
+				<p>For each material, a specific stencil is available. The stencil can be used to lasercut the chassis from a makerspace or lasercut service.</p>
             	<ul>
-            		<li>1 Raspberry PI - Model B o Model B+</li>
-            		<li>1 Raspberry Camera module</li>
-            		<li>1 Scheda di controllo motori</li>
-            		<li>1 Batteria</li>
-            		<li>2 Cavi USB</li>
+            		<li><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VDhVWmxuOGl0Q28&authuser=0" target="new">Telaio acrilico</a> - spessore 3mm - motori dc</li>
+            		<li><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VFI3VFducTNjYjQ&authuser=0" target="new">Telaio legno</a> - spessore 3mm - motori servo</li>
+            		<li><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9QUJLQW9kX1oxbVE&authuser=0" target="new">Telaio cartone corrugato</a> - spessore 6mm - motori dc o servo</li>
             	</ul>
-                <h3>Raspberry PI</h3>
-                <p>CoderBot utilizza Raspberry Pi come controller principale, sono adatti il Model B e il recente B+, quest'ultimo preferibile per i ridotti consumi.</p>
-                <p>Il Model A può essere utilizzato per realizzare un robot "cieco", infatti per gestire la Camera, e soprattutto il riconoscimento degli oggetti, sono necessari circa 384MB (il Model B ne ha 512, il Model A si ferma a 256MB).</p>
-                <h3>Camera module</h3>
-                <p>Esistono due tipi di camera: una normale e una modificata per essere sensibile all'infrarosso per visione notturna. Salvo applicazioni particolari, si utilizza la Camera normale.</p>
-                <h3>Scheda di controllo motori</h3>
-                <p>Ne esistono di due tipi: una adatta al controllo di motori in corrente continua e una specifica e semplificata per controllare servomotori in modalità PWM, da scegliere in base alle caratteristiche dei motori.</p>
-                <h3>Batteria</h3>
-				<p>La batteria deve avere due uscite indipendenti, una per alimentare Raspberry e una per alimentare i mototi tramite la scheda di controllo. 
-				E' possibile in alternativa utilizzare due batterie più piccole indipendenti a condizione  che la corrente in uscita sia di almeno 1A su 5V</p>
-                <h3>Cavi USB</h3>
-                <p>Due cavi USB-A - USB-Micro (maschio-maschio) per collegare l'output della batteria a Raspberry e alla Scheda di controllo motori</p>
-            </div>
-
+                <h3>Motors</h3>
+                <p>CoderBot can drive two kind of motors: dc or servo.</p>
+                <p>The choice of the motor type depends on the what activity the robot will be used mostly: servo are more precise although a little slower and more expensive tha dc.</p>
+                <h3>Ball caster</h3>
+                <p>We suggest to use a ball caster like <a href="http://d2anbkwxz3vv3s.cloudfront.net/services/repository/images/38ad78cf-8411-44d9-92ba-dcd8935f1ce3/300/300/PNG" target="new">this one</a>, easy to find in an hardware store.</p>
+                <h3>Screw and bolts</h3>
+                <p>Screws M3x20 and bolts, M3x10 e M2x10 are needed to lock the camera.</p>
+                <h3>Parts list</h3>
+                <p>Parts are listed according to the chassis type.</p>
+                <hr>
+                <h4>Chassis: acrylic (plexiglass), motors: DC</h4>
+                <p>This chassis is made from acrylic plastic. It can be transparent or coloured.</p>
+                <p>The transparent version let all the parts visible, the main disadvantage is the material is fragile and will not survive a fall from a table (tested).</p>
+                <p>It is specific for dc motors</p>
+                <table class="table">
+                <thead>
+                <tr>
+                <th>Component</th>
+                <th>Quantity</th>
+                <th>link</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                <td>Chassis (plexyglass 3mm)</td>
+                <td>1</td>
+                <td><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VDhVWmxuOGl0Q28&authuser=0" target="new">stencil for lasercut</a> can be cut by <a href="http://vectorealism.com" target="new">qui</a></td>
+                </tr>
+                <tr>
+                <td>DC motors</td>
+                <td>2</td>
+                <td><a href="https://www.olimex.com/Products/RobotParts/GearMotors/MG-6-120/" target="new">link</a> <a href="http://microcontrollershop.com/product_info.php?cPath=315&products_id=5832" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Wheels</td>
+                <td>2</td>
+                <td><a href="https://www.olimex.com/Products/RobotParts/Wheels/MG-WHEEL/" target="new">link</a> <a href="http://microcontrollershop.com/product_info.php?products_id=5833" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Ball caster</td>
+                <td>1</td>
+                <td><a href="http://www.leroymerlin.it/catalogo/ruote-e-carrelli/sfera-rotante--15-mm-34104854-p" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Spacer 10mm</td>
+                <td>2</td>
+                <td><a href=http://it.rs-online.com/web/p/distanziali-esagonali-filettati/1256002/" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Spacer 30mm</td>
+                <td>7</td>
+                <td><a href="http://it.rs-online.com/web/p/distanziali-esagonali-filettati/2808991/" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Spacer 5mm</td>
+                <td>4</td>
+                <td><a href="http://it.rs-online.com/web/p/distanziatore/1364412/" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Screws M3x5</td>
+                <td>2</td>
+                <td><a href="#">N/A</a></td>
+                </tr>
+                <tr>
+                <td>Screws M3x10</td>
+                <td>7</td>
+                <td><a href="#">N/A</a></td>
+                </tr>
+                <tr>
+                <td>Screws M2x10</td>
+                <td>4</td>
+                <td><a href="#">N/A</a></td>
+                </tr>
+                </tbody>
+                </table>
+                <h4>Assembly</h4>
+				<ol>
+				  <li>Fissare i motori al telaio</li>
+				  <li>Fissare le ruote ai motori</li>
+				  <li>Fissare la ruota libera al telaio</li>
+				  <li>Fissare la scheda di controllo a Raspberry PI</li>
+				  <li>Collegare la scheda SD a Raspberry PI</li>
+				  <li>Collegare la scheda wi-fi a Raspberry PI</li>
+				  <li>Fissare la scheda Raspberry PI al telaio</li>
+				  <li>Fissare i due distanziali da 3mm maschio-femmina al telaio</li>
+				  <li>Fissare la camera al proprio supporto, completare il supporto con la protezione anteriore</li>
+				  <li>Fissare il traliccio anteriore e il logo CoderBot al telaio</li>
+				  <li>Fissare Raspberry PI al telaio</li>
+				  <li>Fissare la camera e il proprio supporto al traliccio</li>
+				  <li>Collegare la camera a Raspberry</li>
+				  <li>Collegare i motori alla scheda di controllo</li>
+				  <li>Fissare il "kill switch" al tetto</li>
+				  <li>Collegare collegare il "kill swith" alla scheda di controllo</li>
+				  <li>Fissare il tetto</li>
+				  <li>Collegare l'altoparlante a Raspberry</li>
+				  <li>Inserire la batteria nell'alloggiamento</li>
+				  <li>Collegare la batteria a raspberry e scheda di controllo</li>
+				</ol>
+                <hr>
+                <h4>Chassis Corrugated cardboard (6mm), motors: DC</h4>
+                <p>This chassis is made of corrugated cardboard of 6mm thick.</p>
+                <p>The main advantage of this material is the low price, it can also be painted with pens or brushes.</p>
+                <p>Thanks to the joints and reduced use of screws, it can be assembled in minutes, even by children (initially with a tutor).</p>
+                <p>It is quite robust and resilient to falls, although it tends to flex and loose the mechanical properties over time.</p>
+                <table class="table">
+                <thead>
+                <tr>
+                <th>Component</th>
+                <th>Quantity</th>
+                <th>link</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                <td>Chassis Corrugated cardboard (6mm)</td>
+                <td>1</td>
+                <td><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9QUJLQW9kX1oxbVE&authuser=0" target="new">stencil per laser</a> tagliabile <a href="http://vectorealism.com" target="new">qui</a></td>
+                </tr>
+                <tr>
+                <td>DC motors</td>
+                <td>2</td>
+                <td><a href="https://www.olimex.com/Products/RobotParts/GearMotors/MG-6-120/" target="new">link</a> <a href="http://microcontrollershop.com/product_info.php?cPath=315&products_id=5832" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Wheels</td>
+                <td>2</td>
+                <td><a href="https://www.olimex.com/Products/RobotParts/Wheels/MG-WHEEL/" target="new">link</a> <a href="http://microcontrollershop.com/product_info.php?products_id=5833" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Ball caster</td>
+                <td>1</td>
+                <td><a href="http://www.leroymerlin.it/catalogo/ruote-e-carrelli/sfera-rotante--15-mm-34104854-p" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Spacer 30mm male-female</td>
+                <td>3</td>
+                <td><a href="http://it.rs-online.com/web/p/distanziali-esagonali-filettati/2808991/" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Spacer 40mm male-female</td>
+                <td>2</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Spacer 30mm female-female</td>
+                <td>2</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Spacer 5mm</td>
+                <td>2</td>
+                <td><a href="http://it.rs-online.com/web/p/distanziatore/1364412/" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Screws M3x30</td>
+                <td>4</td>
+                <td><a href="#">N/A</a></td>
+                </tr>
+                <tr>
+                <td>Screws M3x5</td>
+                <td>3</td>
+                <td><a href="#">N/A</a></td>
+                </tr>
+                <tr>
+                <td>Screws M3x10</td>
+                <td>2</td>
+                <td><a href="#">N/A</a></td>
+                </tr>
+                <tr>
+                <td>Bolts M3</td>
+                <td>9</td>
+                <td><a href="#">N/A</a></td>
+                </tr>
+                <tr>
+                <td>Roundel M3</td>
+                <td>6</td>
+                <td><a href="#">N/A</a></td>
+                </tr>
+                </tbody>
+                </table>          
+                <h4>Assembly</h4>
+				<ol>
+				  <li>Montare le pareti laterali e il logo CoderBot al telaio</li>
+				  <li>Fissare le ruote ai motori</li>
+				  <li>Fissare i motori al telaio con il biadesivo</li>
+				  <li>Fissare la ruota libera al telaio</li>
+				  <li>Fissare la scheda di controllo a Raspberry PI</li>
+				  <li>Collegare la scheda SD a Raspberry PI</li>
+				  <li>Collegare la scheda wi-fi a Raspberry PI</li>
+				  <li>Fissare la scheda Raspberry PI al telaio</li>
+				  <li>Fissare la camera al proprio supporto</li>
+				  <li>Fissare Raspberry PI al telaio</li>
+				  <li>Fissare la camera e il proprio supporto al traliccio</li>
+				  <li>Collegare la camera a Raspberry</li>
+				  <li>Collegare i motori alla scheda di controllo</li>
+				  <li>Fissare il "kill switch" alla parete</li>
+				  <li>Collegare il "kill swith" alla scheda di controllo</li>
+				  <li>Inserire la batteria nell'alloggiamento</li>
+				  <li>Collegare la batteria a raspberry e scheda di controllo</li>
+				</ol>
+                <hr>
+                <h4>Chassis wood, motors: servo</h4>
+                <p>This chassis is made with a plywood (poplar or harder woods are ok) of 3mm thick.</p>
+                <p>Good compromise of robustness, economicity and durability. It can be painted, like the cardboard version.</p>
+                <p>Thanks to the joints and reduced use of screws, it can be assembled in minutes even by kids (initally wit a tutor).</p>
+                <p>It is quite resilient to falls.</p>
+                <p>It is designed to use servo motors. Wheels are the actual (large) wheel provied with the servo. They must be covered with rubber to avoid slides</p>                
+                <table class="table">
+                <thead>
+                <tr>
+                <th>Component</th>
+                <th>Quantity</th>
+                <th>link</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                <td>Chassis wood (plywood 3mm)</td>
+                <td>1</td>
+                <td><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VFI3VFducTNjYjQ&authuser=0" target="new">stencil per lasercut</a> tagliabile <a href="http://vectorealism.com" target="new">qui</a></td>
+                </tr>
+                <tr>
+                <td>Servo motors</td>
+                <td>2</td>
+                <td><a href="http://www.pololu.com/product/1248">link</a> <a href="http://www.amazon.it/SM-S4303R-Servomotore-Elicotteri-Robot-Ricambio/dp/B00EYYQ61K/ref=sr_1_1">link</a></td>
+                </tr>
+                <tr>
+                <td>Ball caster</td>
+                <td>1</td>
+                <td><a href="http://www.leroymerlin.it/catalogo/ruote-e-carrelli/sfera-rotante--15-mm-34104854-p" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Spacer 10mm</td>
+                <td>3</td>
+                <td><a href=http://it.rs-online.com/web/p/distanziali-esagonali-filettati/1256002/" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Spacer 5mm</td>
+                <td>2</td>
+                <td><a href="http://it.rs-online.com/web/p/distanziatore/1364412/" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Screw M3x30</td>
+                <td>4</td>
+                <td><a href="#">N/A</a></td>
+                </tr>
+                <tr>
+                <td>Screw M3x5</td>
+                <td>3</td>
+                <td><a href="#">N/A</a></td>
+                </tr>
+                <tr>
+                <td>Screw M3x10</td>
+                <td>2</td>
+                <td><a href="#">N/A</a></td>
+                </tr>
+                <tr>
+                <td>Bolts M3</td>
+                <td>9</td>
+                <td><a href="#">N/A</a></td>
+                </tr>
+                <tr>
+                <td>Bi-adhesive tape</td>
+                <td>10cm</td>
+                <td><a href="#">N/A</a></td>
+                </tr>
+                </tbody>
+                </table>
+                <hr>
+                <h4>Assembly</h4>
+				<ol>
+				  <li>Montare le pareti laterali e il logo CoderBot al telaio</li>
+				  <li>Fissare i motori al telaio</li>
+				  <li>Fissare la ruota libera al telaio</li>
+				  <li>Fissare la scheda di controllo a Raspberry PI</li>
+				  <li>Collegare la scheda SD a Raspberry PI</li>
+				  <li>Collegare la scheda wi-fi a Raspberry PI</li>
+				  <li>Fissare la scheda Raspberry PI al telaio</li>
+				  <li>Fissare la camera al proprio supporto</li>
+				  <li>Fissare Raspberry PI al telaio</li>
+				  <li>Fissare la camera e il proprio supporto al traliccio</li>
+				  <li>Collegare la camera a Raspberry</li>
+				  <li>Collegare i motori alla scheda di controllo</li>
+				  <li>Fissare il "kill switch" alla parete</li>
+				  <li>Collegare il "kill swith" alla scheda di controllo</li>
+				  <li>Inserire la batteria nell'alloggiamento</li>
+				  <li>Collegare la batteria a raspberry e scheda di controllo</li>
+				</ol>
+           </div>
         </div>
         <!-- /.row -->
