--- a/it/how_to_build_mh.html
+++ b/it/how_to_build_mh.html
@@ -92,7 +92,7 @@ layout: it/default
                 <tr>
                 <td>Distanziali 10mm</td>
                 <td>2</td>
-                <td><a href=http://it.rs-online.com/web/p/distanziali-esagonali-filettati/1256002/" target="new">link</a></td>
+                <td><a href="http://it.rs-online.com/web/p/distanziali-esagonali-filettati/1256002/" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Distanziali 30mm</td>
@@ -130,7 +130,7 @@ layout: it/default
 				  <li>Collegare la scheda SD a Raspberry PI</li>
 				  <li>Collegare la scheda wi-fi a Raspberry PI</li>
 				  <li>Fissare la scheda Raspberry PI al telaio</li>
-				  <li>Fissare i due distanziali da 3mm maschio-femmina al telaio</li>
+				  <li>Fissare i due distanziali da 30 mm maschio-femmina al telaio</li>
 				  <li>Fissare la camera al proprio supporto, completare il supporto con la protezione anteriore</li>
 				  <li>Fissare il traliccio anteriore e il logo CoderBot al telaio</li>
 				  <li>Fissare Raspberry PI al telaio</li>
@@ -144,6 +144,7 @@ layout: it/default
 				  <li>Inserire la batteria nell'alloggiamento</li>
 				  <li>Collegare la batteria a raspberry e scheda di controllo</li>
 				</ol>
+				<p>[Coming soon: Video guida all'assemblaggio]</p>
                 <hr>
                 <h4>Telaio cartone corrugato (6mm), motori dc</h4>
                 <p>Questo telaio è realizzato in cartone corrugato dello spezzore di 6mm.</p>
@@ -246,6 +247,7 @@ layout: it/default
 				  <li>Inserire la batteria nell'alloggiamento</li>
 				  <li>Collegare la batteria a raspberry e scheda di controllo</li>
 				</ol>
+				<p>[Coming soon: Video guida all'assemblaggio]</p>
                 <hr>
                 <h4>Telaio legno, motori servo</h4>
                 <p>Questo telaio è realizzato in legno compensato (pioppo o legni più rigidi) di spessore 3mm.</p>
@@ -280,7 +282,7 @@ layout: it/default
                 <tr>
                 <td>Distanziali 10mm</td>
                 <td>3</td>
-                <td><a href=http://it.rs-online.com/web/p/distanziali-esagonali-filettati/1256002/" target="new">link</a></td>
+                <td><a href="http://it.rs-online.com/web/p/distanziali-esagonali-filettati/1256002/" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Distanziali 5mm</td>
@@ -334,6 +336,7 @@ layout: it/default
 				  <li>Inserire la batteria nell'alloggiamento</li>
 				  <li>Collegare la batteria a raspberry e scheda di controllo</li>
 				</ol>
+				<p>[Coming soon: Video guida all'assemblaggio]</p>
            </div>
         </div>
         <!-- /.row -->
