--- a/en/how_to_build_mh.html
+++ b/en/how_to_build_mh.html
@@ -92,7 +92,7 @@ layout: en/default
                 <tr>
                 <td>Spacer 10mm</td>
                 <td>2</td>
-                <td><a href=http://it.rs-online.com/web/p/distanziali-esagonali-filettati/1256002/" target="new">link</a></td>
+                <td><a href="http://it.rs-online.com/web/p/distanziali-esagonali-filettati/1256002/" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Spacer 30mm</td>
@@ -123,27 +123,27 @@ layout: en/default
                 </table>
                 <h4>Assembly</h4>
 				<ol>
-				  <li>Fissare i motori al telaio</li>
-				  <li>Fissare le ruote ai motori</li>
-				  <li>Fissare la ruota libera al telaio</li>
-				  <li>Fissare la scheda di controllo a Raspberry PI</li>
-				  <li>Collegare la scheda SD a Raspberry PI</li>
-				  <li>Collegare la scheda wi-fi a Raspberry PI</li>
-				  <li>Fissare la scheda Raspberry PI al telaio</li>
-				  <li>Fissare i due distanziali da 3mm maschio-femmina al telaio</li>
-				  <li>Fissare la camera al proprio supporto, completare il supporto con la protezione anteriore</li>
-				  <li>Fissare il traliccio anteriore e il logo CoderBot al telaio</li>
-				  <li>Fissare Raspberry PI al telaio</li>
-				  <li>Fissare la camera e il proprio supporto al traliccio</li>
-				  <li>Collegare la camera a Raspberry</li>
-				  <li>Collegare i motori alla scheda di controllo</li>
-				  <li>Fissare il "kill switch" al tetto</li>
-				  <li>Collegare collegare il "kill swith" alla scheda di controllo</li>
-				  <li>Fissare il tetto</li>
-				  <li>Collegare l'altoparlante a Raspberry</li>
-				  <li>Inserire la batteria nell'alloggiamento</li>
-				  <li>Collegare la batteria a raspberry e scheda di controllo</li>
+				  <li>Bind the motor to the chassis</li>
+				  <li>Bind the wheels to the motors</li>
+				  <li>Bind the ball caster to the chassis</li>
+				  <li>Put the motor controller board on the Raspberry PI</li>
+				  <li>Put the SD card on the Raspberry PI</li>
+				  <li>Put the wifi adapter in the Raspberry PI USB port</li>
+				  <li>Bind the two 30mm spacers to the chassis</li>
+				  <li>Bind the videocamera to his support</li>
+				  <li>Mount the lateral walls and the CoderBot logo tile to the main chassis</li>
+				  <li>Bind the videocamera to his support</li>
+				  <li>Bind the videocamera and his support to the chassis vertical parts</li>
+				  <li>Bind the videocamera and support to the main chassis</li>
+				  <li>Bind the Raspberry PI to the chassis</li>
+				  <li>Connect the videocamera to the Raspberry PI</li>
+				  <li>Connect the motors wires to the motor controller board</li>
+				  <li>Bind the "kill switch" in place</li>
+				  <li>Connect the "kill switch" to the motor control board</li>
+				  <li>Put the battery in the chassis</li>
+				  <li>Connect the battery to the motor controller and to the Raspberry PI, the CoderBot, will bootstrap.</li>
 				</ol>
+				<p>[Coming soon: Video guida all'assemblaggio]</p>
                 <hr>
                 <h4>Chassis Corrugated cardboard (6mm), motors: DC</h4>
                 <p>This chassis is made of corrugated cardboard of 6mm thick.</p>
@@ -228,24 +228,26 @@ layout: en/default
                 </table>          
                 <h4>Assembly</h4>
 				<ol>
-				  <li>Montare le pareti laterali e il logo CoderBot al telaio</li>
-				  <li>Fissare le ruote ai motori</li>
-				  <li>Fissare i motori al telaio con il biadesivo</li>
-				  <li>Fissare la ruota libera al telaio</li>
-				  <li>Fissare la scheda di controllo a Raspberry PI</li>
-				  <li>Collegare la scheda SD a Raspberry PI</li>
-				  <li>Collegare la scheda wi-fi a Raspberry PI</li>
-				  <li>Fissare la scheda Raspberry PI al telaio</li>
-				  <li>Fissare la camera al proprio supporto</li>
-				  <li>Fissare Raspberry PI al telaio</li>
-				  <li>Fissare la camera e il proprio supporto al traliccio</li>
-				  <li>Collegare la camera a Raspberry</li>
-				  <li>Collegare i motori alla scheda di controllo</li>
-				  <li>Fissare il "kill switch" alla parete</li>
-				  <li>Collegare il "kill swith" alla scheda di controllo</li>
-				  <li>Inserire la batteria nell'alloggiamento</li>
-				  <li>Collegare la batteria a raspberry e scheda di controllo</li>
+				  <li>Mount the lateral walls and the CoderBot logo tile to the main chassis</li>
+				  <li>Bind the wheels to the motors</li>
+				  <li>Bind the motor to the chassis</li>
+				  <li>Bind the ball caster to the chassis</li>
+				  <li>Put the motor controller board on the Raspberry PI</li>
+				  <li>Put the SD card on the Raspberry PI</li>
+				  <li>Put the wifi adapter in the Raspberry PI USB port</li>
+				  <li>Bind the Raspberry PI to the chassis</li>
+				  <li>Bind the videocamera to his support</li>
+				  <li>Bind the Raspberry PI to the chassis</li>
+				  <li>Bind the videocamera and his support to the chassis vertical parts</li>
+				  <li>Bind the videocamera and support to the main chassis</li>
+				  <li>Connect the videocamera to the Raspberry PI</li>
+				  <li>Connect the motor wires to the motor controller board</li>
+				  <li>Bind the "kill switch" in place</li>
+				  <li>Connect the "kill switch to the motor control board</li>
+				  <li>Put the battery in the chassis</li>
+				  <li>Connect the battery to the motor controller and to the Raspberry PI, the CoderBot, will bootstrap.</li>
 				</ol>
+				<p>[Coming soon: Video guida all'assemblaggio]</p>
                 <hr>
                 <h4>Chassis wood, motors: servo</h4>
                 <p>This chassis is made with a plywood (poplar or harder woods are ok) of 3mm thick.</p>
@@ -280,7 +282,7 @@ layout: en/default
                 <tr>
                 <td>Spacer 10mm</td>
                 <td>3</td>
-                <td><a href=http://it.rs-online.com/web/p/distanziali-esagonali-filettati/1256002/" target="new">link</a></td>
+                <td><a href="http://it.rs-online.com/web/p/distanziali-esagonali-filettati/1256002/" target="new">link</a></td>
                 </tr>
                 <tr>
                 <td>Spacer 5mm</td>
@@ -317,23 +319,25 @@ layout: en/default
                 <hr>
                 <h4>Assembly</h4>
 				<ol>
-				  <li>Montare le pareti laterali e il logo CoderBot al telaio</li>
-				  <li>Fissare i motori al telaio</li>
-				  <li>Fissare la ruota libera al telaio</li>
-				  <li>Fissare la scheda di controllo a Raspberry PI</li>
-				  <li>Collegare la scheda SD a Raspberry PI</li>
-				  <li>Collegare la scheda wi-fi a Raspberry PI</li>
-				  <li>Fissare la scheda Raspberry PI al telaio</li>
-				  <li>Fissare la camera al proprio supporto</li>
-				  <li>Fissare Raspberry PI al telaio</li>
-				  <li>Fissare la camera e il proprio supporto al traliccio</li>
-				  <li>Collegare la camera a Raspberry</li>
-				  <li>Collegare i motori alla scheda di controllo</li>
-				  <li>Fissare il "kill switch" alla parete</li>
-				  <li>Collegare il "kill swith" alla scheda di controllo</li>
-				  <li>Inserire la batteria nell'alloggiamento</li>
-				  <li>Collegare la batteria a raspberry e scheda di controllo</li>
+				  <li>Mount the lateral walls and the CoderBot logo tile to the main chassis</li>
+				  <li>Bind the motor to the chassis</li>
+				  <li>Bind the ball caster to the chassis</li>
+				  <li>Put the motor controller board on the Raspberry PI</li>
+				  <li>Put the SD card on the Raspberry PI</li>
+				  <li>Put the wifi adapter in the Raspberry PI USB port</li>
+				  <li>Bind the Raspberry PI to the chassis</li>
+				  <li>Bind the videocamera to his support</li>
+				  <li>Bind the Raspberry PI to the chassis</li>
+				  <li>Bind the videocamera and his support to the chassis vertical parts</li>
+				  <li>Bind the videocamera and support to the main chassis</li>
+				  <li>Connect the videocamera to the Raspberry PI</li>
+				  <li>Connect the motor wires to the motor controller board</li>
+				  <li>Bind the "kill switch" in place</li>
+				  <li>Connect the "kill switch to the motor control board</li>
+				  <li>Put the battery in the chassis</li>
+				  <li>Connect the battery to the motor controller and to the Raspberry PI, the CoderBot, will bootstrap.</li>
 				</ol>
+				<p>[Coming soon: Video guida all'assemblaggio]</p>
            </div>
         </div>
         <!-- /.row -->
