--- a/en/how_to_build_mh.html
+++ b/en/how_to_build_mh.html
@@ -42,9 +42,9 @@ layout: en/default
 				<p>The chassis can be built using several materials: acrilic, wood, or corrugated cardboard.</p>
 				<p>For each material, a specific stencil is available. The stencil can be used to lasercut the chassis from a makerspace or lasercut service.</p>
             	<ul>
-            		<li><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VDhVWmxuOGl0Q28&authuser=0" target="new">Telaio acrilico</a> - spessore 3mm - motori dc</li>
-            		<li><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VFI3VFducTNjYjQ&authuser=0" target="new">Telaio legno</a> - spessore 3mm - motori servo</li>
-            		<li><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9QUJLQW9kX1oxbVE&authuser=0" target="new">Telaio cartone corrugato</a> - spessore 6mm - motori dc o servo</li>
+            		<li><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VDhVWmxuOGl0Q28&authuser=0" target="new">Acrylic chassis</a> - thickness: 3mm - motors: dc</li>
+            		<li><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9VFI3VFducTNjYjQ&authuser=0" target="new">Wood chassis</a> - thickness: 3mm - motors: servo</li>
+            		<li><a href="https://drive.google.com/open?id=0B0WH-R3RUJc9QUJLQW9kX1oxbVE&authuser=0" target="new">Corrugated cardboard chassis</a> - thickness: 6mm - motors: dc or servo</li>
             	</ul>
                 <h3>Motors</h3>
                 <p>CoderBot can drive two kind of motors: dc or servo.</p>
