--- a/en/how_to_build_hw.html
+++ b/en/how_to_build_hw.html
@@ -45,6 +45,8 @@ layout: en/default
                 <p>There exists two different versions of the camera module, one for normal, visible light, and one that has ben modified to capture infrared light for night vision. The CoderBot has been build and tested with the normal camera only.</p>
                 <h3>Motor control board (hat)</h3>
                 <p>There are two kind of board: one is for dc motors and one is for servo motors, controlled via PWM. Choose it according to the motors.</p>
+				<p>Here it is the PCB, DC motors version:</p>
+				<iframe width="725" height="448" src="http://123d.circuits.io/circuits/372065-coderbot-motor-shield/embed#pcb" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
                 <h3>Battery</h3>
 				<p>Battery must provide enough energy to power both the PI and the motors, so it must be at least a 5-6000mAh. The battery pack can be one but must provide separate usb plugs, with separate voltage regulators. 
 				It is also possible to use smaller independent battery packs.</p>
